# MLOps_Ecom_project

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
input/: data-access.md
mlruns/0/: meta.yaml
mlruns/178081276325678275/: meta.yaml
mlruns/178081276325678275/6fe836dc33af45909a863b5d0cc15c6c/: meta.yaml
mlruns/178081276325678275/6fe836dc33af45909a863b5d0cc15c6c/metrics/: categorical_variables  data_reduction_ratio  final_columns  final_rows  initial_customers_rows  initial_order_items_rows  initial_order_payments_rows  initial_order_reviews_rows  initial_orders_rows  initial_products_rows  initial_total_rows  missing_percentage_final  missing_values_final  numeric_variables
mlruns/178081276325678275/6fe836dc33af45909a863b5d0cc15c6c/tags/: mlflow.runName  project
mlruns/178081276325678275/7c7100231b734a1f902ea252ca3af130/: meta.yaml
mlruns/178081276325678275/7c7100231b734a1f902ea252ca3af130/metrics/: final_rows  (+13 more)
mlruns/186089277023058083/: meta.yaml
mlruns/186089277023058083/8229394db5424b568c6e927e81756e1f/: meta.yaml
mlruns/186089277023058083/863d9c493cc6470c8e0b7ba5957bceee/: meta.yaml
mlruns/186089277023058083/a55b70a191df46e386f739f195fe575f/: meta.yaml
mlruns/186089277023058083/ffd35b902b40419581e0afef1fb71934/: meta.yaml
mlruns/models/ecomuserseg_kmeans_model/: meta.yaml
mlruns/models/ecomuserseg_production_model/: meta.yaml
notebooks/: 01_pretraitement.ipynb  03_simulation_mise_a_jour.ipynb
output/: clustering_results.pkl  kmeans_model.pkl  production_monitoring_config.pkl  simulation_report.pkl
settings/: params.py
src/ecomuserseg/: __init__.py  business_analysis.py  cli.py  clustering.py  data_processing.py  feature_engineering.py  mlflow_tracking.py  monitoring.py  simulation.py  utils.py  visualization.py
tests/: __init__.py  test_business_analysis.py  test_clustering.py  test_ecomuserseg.py  test_feature_engineering.py  test_monitoring.py  test_simulation.py  test_utils.py
(+73 files in other folders)
